...
            osrsBottomBarButton(
                iconName: "doc.text.magnifyingglass",
                text: "Find",
                action: onFindInPageAction,
                dynamicTypeSize: dynamicTypeSize,
                barHeight: barHeight,
                accessibilityIdentifier: "article_find_button"
            )

            osrsBottomBarButton(
                iconName: "paintbrush",
                text: "Appearance",
                action: onAppearanceAction,
...
                barHeight: barHeight,
                accessibilityIdentifier: "article_appearance_button"
            )

            osrsBottomBarButton(
                iconName: "list.bullet",
                text: "Contents",
                action: onContentsAction,
                isEnabled: true,
                dynamicTypeSize: dynamicTypeSize,
                barHeight: barHeight,
                accessibilityIdentifier: "article_contents_button"
            )
...
        }
    }
    
    private var saveButtonText: String {
        switch saveState {
        case .notSaved:
            return "Save"
        case .downloading:
            return "Saving... \(Int(saveProgress * 100))%"
        case .saved:
            return "Saved"
        case .error:
            return "Retry"
        }
    }
    
    private var saveButtonTintColor: Color {
        switch saveState {
        case .notSaved:
...
