...
                articleUrl: "https://oldschool.runescape.wiki/w/Lumbridge"
            ),
            UpdateItem(
                title: "Bank Tags, Trouver System Rework & More!",
                snippet: "Bank Tags for mobile and the Official Client, Leagues VI rewards tweaks, new Slayer unlocks for Frost Dragons, Trouver System Rework and more!",
                imageUrl: "https://oldschool.runescape.wiki/images/thumb/Varrock.png/320px-Varrock.png",
                articleUrl: "https://oldschool.runescape.wiki/w/Varrock"
            ),
            UpdateItem(
                title: "New Regional Worlds Launch TODAY!",
                snippet: "This week's update brings new Regional Worlds and some handy Farming QoL and Sailing Changes!",
                imageUrl: "https://oldschool.runescape.wiki/images/thumb/Falador.png/320px-Falador.png",
                articleUrl: "https://oldschool.runescape.wiki/w/Falador"
...
