...
        }
        .background(Color(osrsTheme.background))
        .navigationTitle("Video")
        .navigationBarTitleDisplayMode(.inline)
        .toolbar {
            ToolbarItem(placement: .navigationBarTrailing) {
                Button("Done", action: onDone)
            }
        }
    }
}

struct osrsYouTubePlayerSheetModifier: ViewModifier {
...
